--- a/public/style1/index.html
+++ b/public/style1/index.html
@@ -21,11 +21,11 @@
     <header>
       <div>
         <hgroup>
-          <h1>Student Name</h1>
-          <h2>Codes and Sleeps</h2>
+          <h1>Mohamad Moughnie</h1>
+          <h2>Sleeps and code</h2>
         </hgroup>
         <figure>
-          <img src="../images/110x110.png" alt="Student Name">
+          <img src="../images/KT.png" alt="Mohamad Moughnie>
         </figure>
       </div>
     </header>
@@ -33,8 +33,10 @@
       <section id="about">
         <h3>About</h3>
         <p>
-          Pellentesque nec nisi at sapien sagittis sagittis. Aliquam eu condimentum mauris. Proin accumsan enim at risus hendrerit lobortis. Nunc sollicitudin sodales lectus, et rhoncus mi molestie hendrerit. Vestibulum velit lorem, rhoncus a congue ultricies, faucibus facilisis risus. Mauris turpis ante, aliquet ac venenatis at, ornare ut velit. Duis ut erat neque, eget consectetur tellus. 
-        </p>
+          Seasoned, diligent and collaborative Biochemist with extensive knowledge in research, problem solving
+          communication and management skills, delivering accurate scientific result, admiring its different
+          professional applications, employing all my academic knowledge into the work field and contributing to
+          the progress of the operation.        </p>
       </section>
       <section id="competencies">
         <h3>Competencies</h3>
@@ -43,7 +45,7 @@
             <span>HTML</span>
           </div>
           <div class='skill' data-skill="3">
-            <span>CSS</span>
+            <span>Cell thawing</span>
           </div>
           <div class='skill' data-skill="1">
             <span>Javascript</span>
@@ -51,13 +53,13 @@
         </div>
         <div class='skills skills-secondary'>
           <div class='skill' data-skill="9">
-            <span>HTML</span>
+            <span>SDS-PAGE</span>
           </div>
           <div class='skill' data-skill="5">
             <span>CSS</span>
           </div>
           <div class='skill' data-skill="7">
-            <span>Javascript</span>
+            <span>Western blot</span>
           </div>
         </div>
       </section>
@@ -65,53 +67,8 @@
         <h3>Experiences</h3>
         <div class="experience">
           <h4>
-            <span class="experience-type">Man2ouche Seller</span>
-            <span class="experience-institution">Snack Edouard</span>
-          </h4>
-          <div class="experience-details">
-						<span class="experience-location">
-              Paris
-            </span>
-						<span class="experience-date">
-              <span class="day">30</span>
-              <span class="experience-date-separator">/</span>
-              <span class="month">12</span>
-              <span class="experience-date-separator">/</span>
-              <span class="year">1995</span>
-            </span>
-          </div>
-					<p class="experience-description">
-            Pellentesque nec nisi at sapien sagittis sagittis. Aliquam eu condimentum mauris. Proin accumsan enim at risus hendrerit lobortis. Nunc sollicitudin sodales lectus, et rhoncus mi molestie hendrerit. Vestibulum velit lorem, rhoncus a congue ultricies, faucibus facilisis risus. Mauris turpis ante, aliquet ac venenatis at, ornare ut velit. Duis ut erat neque, eget consectetur tellus. 
-          </p>
-        </div>
-        <div class="experience">
-          <h4>
-            <span class="experience-type">Man2ouche Seller</span>
-            <span class="experience-institution">Snack Edouard</span>
-          </h4>
-          <div class="experience-details">
-						<span class="experience-location">
-              Paris
-            </span>
-						<span class="experience-date">
-              <span class="day">30</span>
-              <span class="experience-date-separator">/</span>
-              <span class="month">12</span>
-              <span class="experience-date-separator">/</span>
-              <span class="year">1995</span>
-            </span>
-          </div>
-					<p class="experience-description">
-            Pellentesque nec nisi at sapien sagittis sagittis. Aliquam eu condimentum mauris. Proin accumsan enim at risus hendrerit lobortis. Nunc sollicitudin sodales lectus, et rhoncus mi molestie hendrerit. Vestibulum velit lorem, rhoncus a congue ultricies, faucibus facilisis risus. Mauris turpis ante, aliquet ac venenatis at, ornare ut velit. Duis ut erat neque, eget consectetur tellus. 
-          </p>
-        </div>
-      </section>
-      <section id="education">
-        <h3>Education</h3>
-        <div class="experience">
-          <h4>
-            <span class="experience-type">Web Stack Training</span>
-            <span class="experience-institution">Codi</span>
+            <span class="experience-type">Conducted  Research</span>
+            <span class="experience-institution"> Lebanese University</span>
           </h4>
           <div class="experience-details">
 						<span class="experience-location">
@@ -122,17 +79,19 @@
               <span class="experience-date-separator">/</span>
               <span class="month">12</span>
               <span class="experience-date-separator">/</span>
-              <span class="year">1995</span>
+              <span class="year">2016</span>
             </span>
           </div>
 					<p class="experience-description">
-            Pellentesque nec nisi at sapien sagittis sagittis. Aliquam eu condimentum mauris. Proin accumsan enim at risus hendrerit lobortis. Nunc sollicitudin sodales lectus, et rhoncus mi molestie hendrerit. Vestibulum velit lorem, rhoncus a congue ultricies, faucibus facilisis risus. Mauris turpis ante, aliquet ac venenatis at, ornare ut velit. Duis ut erat neque, eget consectetur tellus. 
-          </p>
+            Required laboratory work with data analysis.
+            Cell thawing, passage, plating and treatment.
+            Protein extraction and quantification of concentrations.
+            SDS polyacrylamide gel electrophoresis (SDS-PAGE)and western blot.          </p>
         </div>
         <div class="experience">
           <h4>
-            <span class="experience-type">Man2ouche Seller</span>
-            <span class="experience-institution">Snack Edouard</span>
+            <span class="experience-type">Administrative Assistance</span>
+            <span class="experience-institution">The MKB</span>
           </h4>
           <div class="experience-details">
 						<span class="experience-location">
@@ -143,20 +102,69 @@
               <span class="experience-date-separator">/</span>
               <span class="month">12</span>
               <span class="experience-date-separator">/</span>
-              <span class="year">1995</span>
+              <span class="year">2017</span>
             </span>
           </div>
 					<p class="experience-description">
-            Pellentesque nec nisi at sapien sagittis sagittis. Aliquam eu condimentum mauris. Proin accumsan enim at risus hendrerit lobortis. Nunc sollicitudin sodales lectus, et rhoncus mi molestie hendrerit. Vestibulum velit lorem, rhoncus a congue ultricies, faucibus facilisis risus. Mauris turpis ante, aliquet ac venenatis at, ornare ut velit. Duis ut erat neque, eget consectetur tellus. 
-          </p>
+            Mentoring and educating new team members.
+            Carry out a range of cashiering tasks, including issuing receipts, tallying money, and producing reports for cash base services.
+            Handle insurance claims by obtaining authorizations, drafting bordereaux, and submitting the necessary paperwork.
+            Follow regulations          </p>
+        </div>
+      </section>
+      <section id="education">
+        <h3>Education</h3>
+        <div class="experience">
+          <h4>
+            <span class="experience-type">Bachelor Of Science In Biochemistry</span>
+            <span class="experience-institution">Lebanese University</span>
+          </h4>
+          <div class="experience-details">
+						<span class="experience-location">
+              Beirut
+            </span>
+						<span class="experience-date">
+              <span class="day">30</span>
+              <span class="experience-date-separator">/</span>
+              <span class="month">7</span>
+              <span class="experience-date-separator">/</span>
+              <span class="year">2014</span>
+            </span>
+          </div>
+					<p class="experience-description">
+            Master II Research Project “Effect of Stattic on the phosphorylation of STAT3 in endothelial cells
+            Ensuring the completion of the given surveys and the collection of correct data.
+            Checking completed surveys for correctness, completeness, and readability.          </p>
+        </div>
+        <div class="experience">
+          <h4>
+            <span class="experience-type">Master II Degree In Cardiovascular Pharmacology,</span>
+            <span class="experience-institution">Lebanese University</span>
+          </h4>
+          <div class="experience-details">
+						<span class="experience-location">
+              Paris
+            </span>
+						<span class="experience-date">
+              <span class="day">30</span>
+              <span class="experience-date-separator">/</span>
+              <span class="month">7</span>
+              <span class="experience-date-separator">/</span>
+              <span class="year">2017</span>
+            </span>
+          </div>
+					<p class="experience-description">
+            Performed routine tests using standard techniques and equipments.
+            Stored and labeled specimens and prepared them for analytical tests.
+            Calibrated and completed routine maintenance on test equipment, clean and sterilize laboratory equipment and other lab supplies.          </p>
         </div>
       </section>
       <section id="hobbies">
         <h3>Hobbies</h3>
         <ul>
-          <li>Watching Youtube</li>
+          <li>Watching Netflix</li>
           <li>Sleeping</li>
-          <li>Writing CVs</li>
+          <li>Reading</li>
         </ul>
       </section>
       <section id="contact">
@@ -165,29 +173,29 @@
           <dl class="contact contact-email">
             <dt class="contact-type">Email</dt>
             <dd class="contact-value">
-              <a href="mailto:student@codi.tech">student@codi.tech</a>
+              <a href="mailto:student@codi.tech">mhd.m@hotmail.com</a>
             </dd>
           </dl>
           <dl class="contact contact-skype">
             <dt class="contact-type">Skype</dt>
-            <dd class="contact-value">first-last</dd>
+            <dd class="contact-value">MohamadMg</dd>
           </dl>
           <dl class="contact contact-phone">
             <dt class="contact-type">Phone/Whatsapp</dt>
             <dd class="contact-value">
-              <a href="tel:+96170261482">+9613123123</a>
+              <a href="tel:+96170261482">+96170606023</a>
             </dd>
           </dl>
           <dl class="contact contact-github">
             <dt class="contact-type">Github</dt>
             <dd class="contact-value">
-              <a href="https://github.com/User/" target="_blank">UserName</a>
+              <a href="https://github.com/User/" target="_blank">Wexeis</a>
             </dd>
           </dl>
           <dl class="contact contact-facebook">
             <dt class="contact-type">Facebook</dt>
             <dd class="contact-value">
-              <a href="//www.facebook.com/profileName" target="_blank">Profile Name</a>
+              <a href="//www.facebook.com/profileName" target="_blank"> mry3k</a>
             </dd>        
           </dl>
         </div>
