html after fixing an error in code

--- a/public/style1/index.html
+++ b/public/style1/index.html
@@ -25,7 +25,7 @@
           <h2>Sleeps and code</h2>
         </hgroup>
         <figure>
-          <img src="../images/KT.png" alt="Mohamad Moughnie>
+          <img src="../images/KT.png" alt="Mohamad Moughnie">
         </figure>
       </div>
     </header>
@@ -178,7 +178,7 @@
           </dl>
           <dl class="contact contact-skype">
             <dt class="contact-type">Skype</dt>
-            <dd class="contact-value">MohamadMg</dd>
+            <dd class="contact-value">MohamadMg/dd>
           </dl>
           <dl class="contact contact-phone">
             <dt class="contact-type">Phone/Whatsapp</dt>
