--- a/public/style2/index.html
+++ b/public/style2/index.html
@@ -95,7 +95,7 @@
           </h4>
           <div class="experience-details">
 						<span class="experience-location">
-              Paris
+              Beirut
             </span>
 						<span class="experience-date">
               <span class="day">30</span>
@@ -143,7 +143,7 @@
           </h4>
           <div class="experience-details">
 						<span class="experience-location">
-              Paris
+              Beirut
             </span>
 						<span class="experience-date">
               <span class="day">30</span>
